# large_txt_reader

./: .gitignore  Cargo.toml  README.md  android_build.cmd  android_debug.cmd  debug.cmd  init.md  styles.css  test123456.jks
plugins/tauri-plugin-large-file-preview/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-large-file-preview/permissions/: default.toml
plugins/tauri-plugin-large-file-preview/permissions/autogenerated/: reference.md
plugins/tauri-plugin-large-file-preview/permissions/autogenerated/commands/: get_file_size.toml  get_total_lines.toml  mmap_search.toml  read_lines.toml
plugins/tauri-plugin-large-file-preview/permissions/schemas/: schema.json
plugins/tauri-plugin-large-file-preview/src/: commands.rs  lib.rs  models.rs
src/: app.rs  dialog.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
