[package]
name = "large_txt_reader_app"
version = "0.1.0"
description = "超大文本查看器"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "large_txt_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-large-file-preview = { path = "../plugins/tauri-plugin-large-file-preview" }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
tauri-plugin-android-fs = "23.0.1"
