[package]
name = "tauri-plugin-large-file-preview"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-large-file-preview"

[dependencies]
tauri = { version = "2.9.4" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9.9"
memchr = "2.7.6"
smol = "2.0.2"
anyhow = "1"
once_cell = "1.21.3"
log = "0.4"

# anroid系统依赖
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
tauri-plugin-android-fs = "23.0.1"

[target.'cfg(all(not(target_os = "android"), any(target_os = "windows", target_os = "linux", target_os = "macos")))'.dependencies]
rfd = "0.16.0"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
